# onecheck

./: .gitignore  .pylintrc  pyproject.toml
onecheck/: demo.py  pyproject.toml
onecheck/commands/: __init__.py
onecheck/commands/hello/: __init__.py
onecheck/commands/test/: __init__.py
onecheck/core/: __init__.py  api.py  config.py
onecheck/tests/: test_mock.py  test_simple.py
