[tool.poetry]
name = "onecheck-monorepo"
version = "0.1.0"
description = ""
authors = ["alekzonder <alekzonder@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "onecheck_monorepo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
