[tool.poetry]
name = "onecheck-monorepo"
version = "0.1.0"
description = ""
authors = ["alekzonder <alekzonder@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "onecheck_monorepo"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
autopep8 = "^2.0.1"
mypy = "^0.991"
poethepoet = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
