[tool.poetry]
name = "onecheck"
version = "0.1.0"
description = ""
authors = ["alekzonder <alekzonder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest"
lint = { shell = "mypy . && pylint --recursive y ." }
"lint:fix" = "autopep8 -r -i ."
build = { shell = "poe test && poe lint" }
